--- a/public/css/vaccines.css
+++ b/public/css/vaccines.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../../img/covid/bg.jpg) 0 0 no-repeat;
+  background: url(../../img/vaccines/bg.jpg) 0 0 no-repeat;
   background-size: 100% 100%;
 }
 
