--- a/public/css/nipah.css
+++ b/public/css/nipah.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../../img/zoonotic/bg.jpg) 0 0 no-repeat;
+  background: url(../../img/nipah/bg.jpg) 0 0 no-repeat;
   background-size: 100% 100%;
 }
 
