--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -2,6 +2,9 @@ body {
   background: url(../../img/zoonotic/bg.jpg) 0 0 no-repeat;
   background-size: 100% 100%;
 }
-
+.progressbar .worldtitle {
+  top: 10%;
+  left: -18%;
+}
 @media only screen and (max-height: 480px) {
 }
