--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -3,5 +3,264 @@ body {
   background-size: 100% 100%;
 }
 
+.gina {
+  bottom: 2.8646vw;
+  left: 8.8542vw;
+  z-index: 3;
+  width: 23.3333vw;
+}
+
+.gina img {
+  position: relative;
+  z-index: 2;
+}
+
+.gina .bubble {
+  z-index: 1;
+  position: absolute;
+  top: -4.9479vw;
+  left: 17.1875vw;
+}
+
+.ilyas {
+  width: 19.2188vw;
+  bottom: 0;
+  right: 19.792vw;
+  z-index: 3;
+}
+
+.ilyas img {
+  position: relative;
+  z-index: 2;
+}
+
+.ilyas .bubble {
+  z-index: 1;
+  position: absolute;
+  bottom: 6.771vw;
+  left: -19.7917vw;
+}
+
+.tv {
+  position: absolute;
+  width: 19.7396vw;
+  height: 12.0833vw;
+  background: url(../img/pandemics/moving-tv.png) 0px 0px;
+  background-size: 197.3958vw;
+  animation: play 0.9s steps(10) infinite;
+  bottom: 22.0833vw;
+  left: 8.594vw;
+}
+
+.discover-outbreak {
+  cursor: pointer;
+  width: 17.5521vw;
+  height: 19.2708vw;
+  background-image: url(../img/pandemics/btn-discover-outbreaks-empty.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  position: absolute;
+  right: 0;
+  top: 18vh;
+  padding: 4.1667vw 2.0833vw;
+  line-height: 1.3;
+  font-size: 2.8646vw;
+  font-family: "tenbyfive";
+  color: #fff;
+  text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000, 4px 5px 0 #000;
+  text-align: center;
+}
+
+@keyframes play {
+  100% {
+    background-position: -197.3958vw;
+  }
+}
+
+
+/* popup */
+
+
+.outbreak-modal .modal-dialog {
+  min-width: 43.2292vw;
+  margin-top: 4.1667vw;
+}
+.outbreak-modal .modal-content {
+  min-height: 46.094vw;
+  background: unset;
+  border: 0px solid #000;
+}
+
+.outbreak-modal .modal-body {
+  padding: 1.0417vw;
+}
+
+.outbreak-modal .modal-header {
+  border-bottom: 0px solid #000;
+}
+
+.outbreak-modal .modal-header .close {
+  background: #323334;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: 2.604vw;
+  width: 4.688vw;
+  height: 4.688vw;
+  opacity: 1;
+  color: #fff;
+  font-size: 4.167vw;
+  line-height: 1;
+  padding: 0;
+  background-image: url(../img/pandemics/btn-prev-off.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.outbreak-modal .modal-header .modal-title {
+  padding: 2.4479vw 5.2083vw 3.6458vw 8.8542vw;
+  margin: -3.125vw 0 0 0;
+  text-align: center;
+  width: 32.7083vw;
+  background-image: url(../img/pandemics/pandemics-spotlight-title-empty.png);
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-size: 2.2917vw;
+  font-family: "tenbyfive";
+  color: #fff;
+  text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000, 4px 5px 0 #000;
+  font-family: "tenbyfive";
+}
+
+.outbreak-modal-content {
+  display: flex;
+  color: #000
+}
+
+.outbreak-modal-content .tab-content {
+  flex-grow: 1;
+  margin-right: 1.0417vw;
+}
+
+.outbreak-modal-content .tab-pane {
+  height: 100%;
+}
+
+.outbreak-modal-content .nav {
+  width: 16.3021vw;
+}
+
+.outbreak-modal-content .nav-link {
+  font-size: 1.6667vw;
+  line-height: 1;
+}
+
+.outbreak-nav-title {
+  display: flex;
+  flex-direction: row;
+  color: #278A73;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.outbreak-modal-content .nav-link .outbreak-nav-title .outbreak-nav-title-year{
+  background: #278A73;
+  color: #fff;
+  text-align: center;
+  border-radius: 1.5625vw;
+  max-width: 8.3333vw;
+  padding: 0.7813vw 1.0417vw 0.3646vw;
+  width: 100%;
+  margin-right: 0.5208vw;
+}
+
+.outbreak-modal-content .nav-link.active  {
+  opacity: 1;
+}
+
+.outbreak-modal-content .nav-link.active .outbreak-nav-title .outbreak-nav-title-year {
+  background-color: #000;
+}
+
+.outbreak-nav-title-name {
+  flex-grow: 1;
+  font-size: 1.4583vw;
+  font-weight: bold;
+}
+
+.outbreak-box {
+  width: 100%;
+  border-radius: 1.5625vw;
+  border: 0.1563vw solid #278A73;
+  background: #E7F2E9;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+    align-items: stretch;
+}
+
+.outbreak-header {
+  background-color: #278A73;
+  color: #fff;
+  font-size: 2.6042vw;
+  line-height: 1;
+  font-family: "tenbyfive";
+  padding: 1.0417vw 2.0833vw 0.5208vw;
+}
+.outbreak-body {
+  height: 100%;
+  padding: 0.7813vw 0;
+}
+
+.outbreak-item {
+  padding: 1.0417vw 2.0833vw ;
+  font-size: 1.3021vw;
+}
+
+.outbreak-item.highlight {
+  background: #DED1C8;
+}
+
+.outbreak-item-value.disease {
+  font-weight: bolder;
+  font-size: 1.9792vw;
+  line-height: 1;
+  color:#278A73;
+}
+
+
+.outbreak-item-value.pathogen {
+  font-size: 1.875vw;
+  font-style: italic;
+  font-weight: 600;
+  line-height: 1;
+}
+
+.transmission {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 0.2604vw;
+  align-items: center;
+}
+.transmission img {
+  width: 2.6042vw;
+  height: 2.6042vw;
+}
+.transmission-value {
+  font-size: 1.4583vw;
+  line-height: 1;
+  margin-left: 0.2604vw;
+}
+
+.transmission-arrow {
+  display: block;
+  margin: 0.4167vw 0.4167vw 0.4167vw 0.9375vw;
+}
+
+
 @media only screen and (max-height: 480px) {
 }
