--- a/public/css/base.css
+++ b/public/css/base.css
@@ -192,7 +192,7 @@ button:active {
 }
 
 .custom-modal .modal-body {
-  padding: 20px 120px;
+  padding: 0px 6.25vw 1.0417vw;
 }
 
 .custom-modal .modal-header {
@@ -260,11 +260,18 @@ button:active {
 }
 
 
+.custom-modal .popup-content img {
+  max-width: 31.9271vw;
+  width: 100%;
+  margin-bottom: 0.5208vw;
+}
+
+
 .custom-modal .popup-content .popup-text {
 
-  font-size: 38px;
+  font-size: 1.9792vw;
   text-align: center;
-  padding: 0 50px;
+  padding: 0 2.6042vw;
   font-weight: bold;
 }
 
@@ -336,4 +343,29 @@ button:active {
   border-right: 2.604vw solid transparent;
   left: 3.125vw;
   top: -2.396vw;
+}
+
+/* discover outbreak / right button */
+.discover-outbreak {
+  cursor: pointer;
+  width: 17.5521vw;
+  height: 19.2708vw;
+  background-image: url(../img/pandemics/btn-discover-outbreaks-empty.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  position: absolute;
+  right: 0;
+  top: 18vh;
+  line-height: 1.3;
+  font-size: 2.5vw;
+  padding: 0 1.0417vw;
+  font-family: "tenbyfive";
+  color: #fff;
+  text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000, 4px 5px 0 #000;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
