--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -6,5 +6,140 @@ body {
   top: 10%;
   left: -18%;
 }
+
+.gina {
+  bottom: 2.8646vw;
+  left: 14.0625vw;
+  z-index: 3;
+  width: 23.3333vw;
+}
+
+.gina img {
+  position: relative;
+  z-index: 2;
+}
+
+.gina .bubble {
+  z-index: 1;
+  position: absolute;
+  top: -12.25vw;
+  left: 17.1875vw;
+}
+
+.ilyas {
+  width: 19.2188vw;
+  bottom: 0;
+  right: 19.792vw;
+  z-index: 3;
+}
+
+.ilyas img {
+  position: relative;
+  z-index: 2;
+}
+
+.ilyas .bubble {
+  z-index: 1;
+  position: absolute;
+  top: 11.4583vw;
+  left: -21.875vw;
+}
+
+
+
+/* spotlight */
+
+.spotlight-modal .modal-dialog {
+  min-width: 89.5833vw;
+}
+.spotlight-modal .modal-content {
+  min-height: 46.094vw;
+  background: unset;
+  border: 0px solid #000;
+  flex-direction: column;
+}
+
+.spotlight-modal .modal-body {
+  padding: 1.0417vw;
+  display: flex;
+}
+
+.spotlight-modal .modal-header {
+  border-bottom: 0px solid #000;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.spotlight-modal .modal-header .close {
+  background: #323334;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: 3.3854vw;
+  width: 4.688vw;
+  height: 4.688vw;
+  opacity: 1;
+  color: #fff;
+  font-size: 4.167vw;
+  line-height: 1;
+  padding: 0;
+  background-image: url(../img/pandemics/btn-prev-off.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.spotlight-modal .modal-header .modal-title {
+  padding: 2.3438vw 5.2083vw 1.5625vw 5.2083vw;
+  text-align: center;
+  background-image: url(../img/zoonotic/zoonotic-spotlight-title-base.png);
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-size: 2.2917vw;
+  font-family: "tenbyfive";
+  color: #fff;
+  text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000, 4px 5px 0 #000;
+  font-family: "tenbyfive";
+}
+
+.spotlight-modal-content {
+  display: flex;
+  color: #000;
+  align-self: stretch;
+  flex-direction: row;
+  justify-content: center;
+  flex: 1;
+}
+
+.transmission-box {
+  margin: 0.2604vw;
+  background-color: #E7F3E8;
+  border: 0.1563vw solid #278A73;
+  border-radius: 1.0417vw;
+  height: 100%;
+}
+
+
+.transmission-box img {
+  padding: 10px;
+}
+
+.transmission-title {
+  text-align: center;
+  color: #278A73;
+  font-weight: 900;
+  font-size: 1.5625vw;
+  margin-bottom: 0.5208vw;
+  padding: 0.5208vw  1.0417vw;
+  line-height: 1.2;
+}
+
+.transmission-desc {
+  text-align: center;
+  font-size: 1.1458vw;
+  padding: 0.7813vw;
+}
+
 @media only screen and (max-height: 480px) {
 }
