--- a/public/css/nipah.css
+++ b/public/css/nipah.css
@@ -3,5 +3,148 @@ body {
   background-size: 100% 100%;
 }
 
+
+.gina {
+  bottom: 2.8646vw;
+  left: 14.0625vw;
+  z-index: 3;
+  width: 23.3333vw;
+}
+
+.gina img {
+  position: relative;
+  z-index: 2;
+}
+
+.gina .bubble {
+  z-index: 1;
+  position: absolute;
+  top: -12.25vw;
+  left: 17.1875vw;
+}
+
+.ilyas {
+  width: 19.2188vw;
+  bottom: 0;
+  right: 19.792vw;
+  z-index: 3;
+}
+
+.ilyas img {
+  position: relative;
+  z-index: 2;
+}
+
+.ilyas .bubble {
+  z-index: 1;
+  position: absolute;
+  top: 14.8438vw;
+  left: -19.7917vw;
+}
+
+
+/* spotlight */
+
+.spotlight-modal .modal-dialog {
+  min-width: 69.7917vw;
+}
+.spotlight-modal .modal-content {
+  min-height: 46.094vw;
+  background: unset;
+  border: 0px solid #000;
+  flex-direction: column;
+}
+
+.spotlight-modal .modal-body {
+  padding: 1.0417vw;
+  display: flex;
+}
+
+.spotlight-modal .modal-header {
+  border-bottom: 0px solid #000;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.spotlight-modal .modal-header .close {
+  background: #323334;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: 3.3854vw;
+  width: 4.688vw;
+  height: 4.688vw;
+  opacity: 1;
+  color: #fff;
+  font-size: 4.167vw;
+  line-height: 1;
+  padding: 0;
+  background-image: url(../img/pandemics/btn-prev-off.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.spotlight-modal .modal-header .modal-title {
+  padding: 2.3438vw 5.2083vw 1.5625vw 5.2083vw;
+  text-align: center;
+  background-image: url(../img/nipah/nipah-spotlight-title-base.png);
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-size: 2.2917vw;
+  font-family: "tenbyfive";
+  color: #fff;
+  text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000, 4px 5px 0 #000;
+  font-family: "tenbyfive";
+}
+
+.spotlight-modal-content {
+  position: relative;
+}
+
+.spotlight-modal-content img {
+  width: 100%;
+  max-width: 69.2708vw;
+}
+
+.structure-box {
+  max-width: 18.2292vw;
+  width: 100%;
+  color: #fff;
+  position: absolute;
+  padding: 1.5625vw 2.3438vw;
+  min-height: 10.4167vw;
+}
+
+.pos-0 {
+  top: 6.7708vw;
+  left: 0
+}
+
+.pos-1 {
+  top: 0.4688vw;
+  right: 0
+}
+
+.pos-2 {
+  top: 12.8646vw;
+  right: 0
+}
+
+.structure-title {
+  font-size:1.4583vw;
+  font-weight: bolder;
+  line-height: 1;
+  margin-bottom: 0.1563vw;
+}
+
+.structure-desc {
+  font-size:1.3542vw;
+  line-height: 1.2;
+}
+
+
+
 @media only screen and (max-height: 480px) {
 }
