--- a/public/css/base.css
+++ b/public/css/base.css
@@ -118,6 +118,7 @@ button:active {
   right: 0;
   border: 0px solid red;
   padding: 0.1rem 7rem 5rem 2.2rem;
+  z-index: 100;
 }
 .progressbar .flex-row {
   height: 5vh;
@@ -138,7 +139,7 @@ button:active {
   position: absolute;
   bottom: 0;
   font-size: 2vw;
-  z-index: 5;
+  z-index: 8;
 }
 .bottom-nav .back {
   background: url(../img/btn-btm-back.png) 0 0 no-repeat;
@@ -262,18 +263,71 @@ button:active {
   font-weight: bold;
 }
 
+/* pop2 */
+
+.spotlight-pop {
+  position: absolute;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.spotlight-pop .content {
+  position: relative;
+  z-index: 1;
+}
+
+.spotlight-pop .bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.spotlight-pop .title {
+  padding: 2vw 0;
+  background: url(/img/toolsandtechniques/tools-spotlight-title-base.png) center
+    center no-repeat;
+  background-size: 100% 100%;
+  font-size: 2.3vw;
+  font-family: "tenbyfive";
+  color: #fff;
+  text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000,
+    4px 5px 0 #000;
+  font-family: "tenbyfive";
+  text-align: center;
+}
+
+.spotlight-pop .close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 3vw;
+  height: 3vw;
+  opacity: 1;
+  background: url(../img/btn-pop-off.png) center center no-repeat;
+  background-size: 100%;
+}
+
+/* pop2 */
+
 /* text bubble */
 
 .bubble {
   position: relative;
   font-family: sans-serif;
-  font-size: 1.458vw;
+  font-size: 1.358vw;
   min-width: 25.781vw;
   max-width: 26.042vw;
   line-height: 1;
   background: #fff;
   border-radius: 4.167vw;
-  padding: 2.865vw;
+  padding: 1.8vw 3vw;
   text-align: left;
   color: #000;
 }
@@ -301,6 +355,18 @@ button:active {
   border-top: 0px solid #fff;
   border-bottom: 2.604vw solid transparent;
   right: 3.125vw;
+  bottom: -2.396vw;
+}
+.bubble-bottom-middle:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 2.604vw solid #fff;
+  border-right: 0px solid transparent;
+  border-top: 0px solid #fff;
+  border-bottom: 2.604vw solid transparent;
+  left: 11.125vw;
   bottom: -2.396vw;
 }
 
@@ -354,6 +420,7 @@ button:active {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 4;
 }
 
 @media only screen and (orientation: portrait) {
