--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -174,7 +174,7 @@ body {
 .outbreak-box {
   width: 100%;
   border-radius: 1.5625vw;
-  border: 0.1563vw solid #278A73;
+  border: 2px solid #278A73;
   background: #E7F2E9;
   overflow: hidden;
   display: flex;
