--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -115,14 +115,16 @@ body {
 .transmission-box {
   margin: 0.2604vw;
   background-color: #E7F3E8;
-  border: 0.1563vw solid #278A73;
+  border: 2px solid #278A73;
   border-radius: 1.0417vw;
   height: 100%;
+  max-width: 16.6667vw;
 }
 
 
 .transmission-box img {
   padding: 10px;
+  width: 100%;
 }
 
 .transmission-title {
