--- a/public/css/nipah.css
+++ b/public/css/nipah.css
@@ -45,103 +45,119 @@ body {
 
 /* spotlight */
 
-.spotlight-modal .modal-dialog {
-  min-width: 69.7917vw;
+.spotlight-pop .close {
+  top: -6vw;
 }
-.spotlight-modal .modal-content {
-  min-height: 46.094vw;
-  background: unset;
-  border: 0px solid #000;
+
+
+/* tryout */
+#try_pop .modal-content {
+  background-image: url(../img/popup/bg-lg.png);
+}
+
+#try_pop .modal-dialog {
+  min-width: 90vw;
+}
+
+#try_pop .popup-content {
+  margin-top: -2.6042vw;
+}
+
+.try-title {
+  font-size: 1.9792vw;
+  font-weight: 600;
+  padding: 0 10.4167vw;
+}
+
+.try-body {
   flex-direction: column;
 }
 
-.spotlight-modal .modal-body {
-  padding: 1.0417vw;
+.answers {
   display: flex;
+  justify-content: space-between;
 }
 
-.spotlight-modal .modal-header {
-  border-bottom: 0px solid #000;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-.spotlight-modal .modal-header .close {
-  background: #323334;
-  border-radius: 50%;
-  position: absolute;
-  right: 0;
-  top: 3.3854vw;
-  width: 4.688vw;
-  height: 4.688vw;
-  opacity: 1;
-  color: #fff;
-  font-size: 4.167vw;
-  line-height: 1;
-  padding: 0;
-  background-image: url(../img/pandemics/btn-prev-off.png);
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.spotlight-modal .modal-header .modal-title {
-  padding: 2.3438vw 5.2083vw 1.5625vw 5.2083vw;
-  text-align: center;
-  background-image: url(../img/nipah/nipah-spotlight-title-base.png);
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  font-size: 2.2917vw;
-  font-family: "tenbyfive";
-  color: #fff;
-  text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000, 4px 5px 0 #000;
-  font-family: "tenbyfive";
-}
-
-.spotlight-modal-content {
+.answer {
   position: relative;
+  background:#E7F2E9;
+  border-radius: 0.5208vw;
+  width: 20.5729vw;
+  padding: 0.7813vw 1.0417vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 7.8125vw;
 }
 
-.spotlight-modal-content img {
-  width: 100%;
-  max-width: 69.2708vw;
+.answer-title {
+  font-weight: bold;
+  font-size: 1.3542vw;
 }
 
-.structure-box {
-  max-width: 18.2292vw;
-  width: 100%;
-  color: #fff;
-  position: absolute;
-  padding: 1.5625vw 2.3438vw;
-  min-height: 10.4167vw;
-}
-
-.pos-0 {
-  top: 6.7708vw;
-  left: 0
-}
-
-.pos-1 {
-  top: 0.4688vw;
-  right: 0
-}
-
-.pos-2 {
-  top: 12.8646vw;
-  right: 0
-}
-
-.structure-title {
-  font-size:1.4583vw;
-  font-weight: bolder;
-  line-height: 1;
-  margin-bottom: 0.1563vw;
-}
-
-.structure-desc {
-  font-size:1.3542vw;
+.answer-desc {
   line-height: 1.2;
+  font-size: 1.1458vw;
+}
+
+.questions {
+  position: relative;
+  margin-top: 50px;
+}
+
+.questions img {
+  margin: 0 auto;
+  max-width: 25vw !important;
+}
+
+
+.question {
+  position: absolute;
+  border: 3px dotted #339966;
+  border-radius: 0.5208vw;
+  width: 20.5729vw;
+  min-height: 7.8125vw;
+}
+
+.question-box {
+  background:#E7F2E9;
+  border-radius: 0.5208vw;
+  padding: 0.7813vw 1.0417vw;
+  min-height: 7.8125vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0;
+}
+
+
+.question-title {
+  font-weight: bold;
+  font-size: 1.3542vw;
+}
+
+.question-desc {
+  line-height: 1.2;
+  font-size: 1.1458vw;
+}
+
+#q3 {
+  top: 2.9688vw;
+  left: 1.0938vw;
+}
+
+#q2  {
+  top: -1.3542vw;
+  right: 1.0938vw;
+}
+
+#q1  {
+  bottom: 1.3021vw;
+  right: 1.0938vw;
+}
+
+.try-footer {
+  margin-top: -0.5208vw;
 }
 
 
