--- a/public/css/vaccines.css
+++ b/public/css/vaccines.css
@@ -4,7 +4,6 @@ body {
 }
 
 
-
 .gina {
   bottom: 0.8646vw;
   left: 3.0625vw;
@@ -50,70 +49,88 @@ body {
 
 /* spotlight */
 
-.spotlight-modal .modal-dialog {
-  min-width: 1590px;
-}
-.spotlight-modal .modal-content {
-  min-height: 46.094vw;
-  background: unset;
-  border: 0px solid #000;
-  flex-direction: column;
+.spotlight-pop .close {
+  top: -6.5104vw;
 }
 
-.spotlight-modal .modal-body {
-  padding: 1.0417vw;
-  display: flex;
+
+/* tryout */
+#try_pop .modal-content {
+  background-image: url(../img/popup/bg-lg.png);
 }
 
-.spotlight-modal .modal-header {
-  border-bottom: 0px solid #000;
-  justify-content: center;
-  align-items: center;
-  
+#try_pop .modal-dialog {
+  min-width: 90vw;
 }
 
-.spotlight-modal .modal-header .close {
-  background: #323334;
-  border-radius: 50%;
-  position: absolute;
-  right: 0;
-  top: 3.3854vw;
-  width: 4.688vw;
-  height: 4.688vw;
-  opacity: 1;
-  color: #fff;
-  font-size: 4.167vw;
-  line-height: 1;
-  padding: 0;
-  background-image: url(../img/pandemics/btn-prev-off.png);
-  background-position: center;
-  background-repeat: no-repeat;
+#try_pop .popup-content {
+  margin-top: -2.6042vw;
 }
 
-.spotlight-modal .modal-header .modal-title {
-  padding: 2.0833vw 5.2083vw 2.0833vw 5.2083vw;
-  text-align: center;
-  background-image: url(../img/vaccines/vaccines-spotlight-title-base.png);
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  font-size: 2.2917vw;
-  font-family: "tenbyfive";
-  color: #fff;
-  text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000, 4px 5px 0 #000;
-  font-family: "tenbyfive";
+.try-title {
+  font-size: 1.9792vw;
+  font-weight: 600;
+  padding: 0 10.4167vw;
+  margin: 10px 0 0 0;
 }
 
-.spotlight-modal-content {
+.questions {
+  justify-content: space-between;
+}
+
+.answers {
+  justify-content: space-between;
+}
+
+.answer {
+  max-width: 10.4167vw;
+  margin: 5px;
+}
+
+.question {
+  max-width:10.4167vw;
+  margin: 5px;
   position: relative;
-  flex-grow: 1;
+
+}
+
+.question-box {
+  position: relative;
+  border: 2px dotted #339966;
+  border-radius: 10px;
+
+}
+
+.question img {
+  opacity: 0;
+  margin-bottom: 0 !important;
 }
 
 
-.spotlight-modal-content img {
+.question .step {
   width: 100%;
+  text-align: center;
+  color: #fff;
+  background: #278A73;
+  font-weight: bold;
+  border-radius: 10px;
+  padding: 5px 0;
+  margin-bottom: 5px;
 }
 
+.feedback {
+  font-family: tenbyfive;
+  font-size: 2.5vw;
+}
+
+.feedback .star {
+  width: 8% !important;
+}
+
+.try-body {
+  max-width: 48.8646vw;
+  margin: 0 auto;
+}
 
 @media only screen and (max-height: 480px) {
 }
