--- a/public/css/base.css
+++ b/public/css/base.css
@@ -21,7 +21,7 @@ body {
   border: 0px solid red;
 }
 .wrapper {
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 a {
@@ -331,6 +331,18 @@ button:active {
   text-align: left;
   color: #000;
 }
+.bubble-left:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-right: 2.604vw solid #fff;
+  border-left: 0px solid transparent;
+  border-top: 0px solid #fff;
+  border-bottom: 2.604vw solid transparent;
+  left: -2vw;
+  top: 2.396vw;
+}
 
 .bubble-bottom-left:before {
   content: "";
@@ -421,6 +433,17 @@ button:active {
   justify-content: center;
   align-items: center;
   z-index: 4;
+}
+
+.footer {
+  position: absolute;
+  background: url(../../img/landing/sub-logos-bg.png) 0 0 no-repeat;
+  background-size: 100% 100%;
+  z-index: 0;
+  bottom: 0;
+  right: 2%;
+  padding: 2rem 2rem 1rem 2rem;
+  font-weight: bold;
 }
 
 @media only screen and (orientation: portrait) {
