--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -45,11 +45,15 @@ body {
   left: -21.875vw;
 }
 
-
-
 /* spotlight */
 .spotlight-pop .close {
-  top: -8vw;
+  top: -4vw;
+}
+.spotlight-pop .title {
+  background: url(/img/zoonotic/title-base.png) center center no-repeat;
+  background-size: 100% 100%;
+  width: 60%;
+  padding: 1.5vw 0;
 }
 
 /* tryout */
@@ -60,7 +64,7 @@ body {
 }
 
 #try_pop .selectable.selected {
-  border: 4px solid #258C6F;
+  border: 4px solid #258c6f;
 }
 
 #try_pop .selectable img {
@@ -86,7 +90,6 @@ body {
   justify-content: space-between;
   padding: 0 3.125vw;
 }
-
 
 @media only screen and (max-height: 480px) {
 }
