--- a/public/css/base.css
+++ b/public/css/base.css
@@ -322,10 +322,10 @@ button:active {
 .bubble {
   position: relative;
   font-family: sans-serif;
-  font-size: 1.358vw;
+  font-size: 1.25vw;
   min-width: 25.781vw;
   max-width: 26.042vw;
-  line-height: 1;
+  line-height: 1.3;
   background: #fff;
   border-radius: 4.167vw;
   padding: 1.8vw 3vw;
@@ -471,11 +471,11 @@ button:active {
   text-align: center;
   display: inline-block;
   margin: 0 auto;
-  min-width: 400px;
-  min-height: 140px;
-  font-size: 50px;
+  min-width: 20.8333vw;
+  min-height: 7.2917vw;
+  font-size: 2.6042vw;
   color: #fff;
-  padding: 20px 0;
+  padding: 1.0417vw 0;
   font-family: "tenbyfive";
   text-transform: uppercase;
   cursor: pointer;
