--- a/public/css/base.css
+++ b/public/css/base.css
@@ -21,7 +21,7 @@ body {
   border: 0px solid red;
 }
 .wrapper {
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 a {
@@ -93,7 +93,7 @@ button:active {
   background-size: 100% 100%;
   font-family: tenbyfive;
   color: #fff;
-  padding: 1.2rem 0 2.8rem 0;
+  padding: 1rem 0 2rem 0;
   text-align: center;
   font-size: 2.8vw;
   text-transform: uppercase;
@@ -257,7 +257,7 @@ button:active {
 }
 
 .custom-modal .popup-content .popup-text {
-  font-size: 1.9792vw;
+  font-size: 1.7vw;
   text-align: center;
   padding: 0 2.6042vw;
   font-weight: bold;
@@ -322,10 +322,10 @@ button:active {
 .bubble {
   position: relative;
   font-family: sans-serif;
-  font-size: 1.25vw;
+  font-size: 1.28vw;
   min-width: 25.781vw;
   max-width: 26.042vw;
-  line-height: 1.3;
+  line-height: 1;
   background: #fff;
   border-radius: 4.167vw;
   padding: 1.8vw 3vw;
@@ -471,11 +471,11 @@ button:active {
   text-align: center;
   display: inline-block;
   margin: 0 auto;
-  min-width: 20.8333vw;
-  min-height: 7.2917vw;
-  font-size: 2.6042vw;
+  min-width: 400px;
+  min-height: 140px;
+  font-size: 50px;
   color: #fff;
-  padding: 1.0417vw 0;
+  padding: 20px 0;
   font-family: "tenbyfive";
   text-transform: uppercase;
   cursor: pointer;
