--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -1,6 +1,6 @@
 .bg {
   background: url(../../img/overview/bg.png) center top no-repeat;
-  background-size: 80% 100%;
+  background-size: 90% 100%;
   padding: 3rem 0 0 0;
   border: 0px solid red;
 }
@@ -17,7 +17,7 @@
   font-size: 150%;
 }
 .bar {
-  width: 90%;
+  width: 100%;
   margin-bottom: -4rem;
 }
 
@@ -37,27 +37,25 @@
 }
 .ladybird {
   position: absolute;
-  top: -4.5rem;
-  left: -5%;
-  width: 429px;
-  height: 163px;
-  transform: translate(-50%, -50%);
-  background-image: url("../../img/overview/ladybird.png");
-  transform: scale(0.6);
+  top: -2.5vw;
+  left: 1vw;
+  width: 18vw;
+  height: 7vw;
   animation: key 5s steps(10) infinite;
-  animation-delay: 5s;
+  animation-delay: 4s;
   border: 0px solid red;
 }
-
 @keyframes key {
   0% {
     background-position: 0px;
   }
+
   25% {
-    background-position: 4290px;
+    background-position: 180vw;
   }
+
   100% {
-    background-position: 4290px;
+    background-position: 180vw;
   }
 }
 
@@ -75,11 +73,11 @@
     margin-bottom: -3rem;
   }
 
-  .ladybird {
+  /* .ladybird {
     top: -10.5rem;
     left: -19rem;
     transform: scale(0.3);
-  }
+  } */
   .overview-bubble {
     padding: 1rem 1rem 2rem 1rem;
     top: -4.7rem;
