--- a/public/css/base.css
+++ b/public/css/base.css
@@ -5,22 +5,39 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1vw;
-  overflow: hidden;
+  /* overflow: hidden; */
   font-family: Arial, Helvetica, sans-serif;
+  background: url(../img/bg-body.jpg) 0 0 repeat-y;
 }
 
-body {
+.page {
+  width: 100%;
+  /* padding-bottom: 56.25%; */
+  padding-bottom: 57%;
+  position: relative;
+  border: 0px solid red;
   background: url(../img/bg.jpg) 0 0 no-repeat;
   background-size: 100% 100%;
+}
+.page-holder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border: 0px solid blue;
+  margin: auto;
+  overflow: hidden;
 }
 
 .wrapper,
 .navbar {
-  height: 100vh;
+  height: 100%;
   display: block;
   border: 0px solid red;
 }
 .wrapper {
+  position: relative;
   /* overflow: hidden; */
 }
 
