--- a/public/css/base.css
+++ b/public/css/base.css
@@ -5,15 +5,16 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1vw;
-  /* overflow: hidden; */
   font-family: Arial, Helvetica, sans-serif;
   background: url(../img/bg-body.jpg) 0 0 repeat-y;
+  overflow: hidden;
+  background: url(../img/bg.jpg) 0 0 no-repeat;
+  background-size: 100% 100%;
 }
-
+/* 
 .page {
   width: 100%;
-  /* padding-bottom: 56.25%; */
-  padding-bottom: 57%;
+  padding-bottom: 56.25%;
   position: relative;
   border: 0px solid red;
   background: url(../img/bg.jpg) 0 0 no-repeat;
@@ -28,7 +29,7 @@ body {
   border: 0px solid blue;
   margin: auto;
   overflow: hidden;
-}
+} */
 
 .wrapper,
 .navbar {
