--- a/public/css/covid.css
+++ b/public/css/covid.css
@@ -5,9 +5,9 @@ body {
 
 .gina {
   bottom: 2.8646vw;
-  left: 14.0625vw;
+  left: 10vw;
   z-index: 3;
-  width: 23.3333vw;
+  width: 20vw;
 }
 
 .gina img {
@@ -18,14 +18,14 @@ body {
 .gina .bubble {
   z-index: 1;
   position: absolute;
-  top: -9.25vw;
-  left: 5.1875vw;
+  top: -1.25vw;
+  left: 15vw;
   min-width: 34.781vw;
   font-size: 1.28vw;
 }
 
 .ilyas {
-  width: 19.2188vw;
+  width: 17vw;
   bottom: 0;
   right: 19.792vw;
   z-index: 3;
@@ -69,7 +69,7 @@ body {
 .spotlight-pop .modal-desc {
   text-align: center;
   margin: 0 auto;
-  font-size: 1.3542vw;
+  font-size: 1.2vw;
   color: #000;
   text-shadow: none !important;
   max-width: 44.7917vw;
@@ -83,7 +83,8 @@ body {
 
 .spotlight-video {
   width: 52.0833vw;
-  height: 29.3229vw;
+  /* height: 29.3229vw; */
+  height: 23.3229vw;
   border: 5px solid #8dc540;
   margin: 0 auto;
 }
