--- a/public/css/base.css
+++ b/public/css/base.css
@@ -7,18 +7,17 @@ body {
   font-size: 1vw;
   font-family: Arial, Helvetica, sans-serif;
   background: url(../img/bg-body.jpg) 0 0 repeat-y;
-  overflow: hidden;
-  background: url(../img/bg.jpg) 0 0 no-repeat;
-  background-size: 100% 100%;
+  /* overflow: hidden; */
+  /* background: url(../img/bg.jpg) 0 0 no-repeat;
+  background-size: 100% 100%; */
+  border: 0px solid black;
 }
-/* 
+
 .page {
   width: 100%;
   padding-bottom: 56.25%;
   position: relative;
-  border: 0px solid red;
-  background: url(../img/bg.jpg) 0 0 no-repeat;
-  background-size: 100% 100%;
+  /* border: 1px solid red; */
 }
 .page-holder {
   position: absolute;
@@ -26,10 +25,13 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  border: 0px solid blue;
+  /* border: 1px solid blue; */
   margin: auto;
   overflow: hidden;
-} */
+
+  background: url(../img/bg.jpg) 0 0 no-repeat;
+  background-size: 100% 100%;
+}
 
 .wrapper,
 .navbar {
@@ -301,7 +303,7 @@ button:active {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .spotlight-pop .content {
@@ -324,7 +326,7 @@ button:active {
   background: url(/img/toolsandtechniques/tools-spotlight-title-base.png) center
     center no-repeat;
   background-size: 100% 100%;
-  font-size: 2.3vw;
+  font-size: 2.1vw;
   font-family: "tenbyfive";
   color: #fff;
   text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000,
