--- a/public/css/completed.css
+++ b/public/css/completed.css
@@ -1,8 +1,8 @@
 .board {
   background: url(../../img/completed/board.png) center 3vw no-repeat;
   background-size: 90% 90%;
-  padding: 0 2vw 2vw 2vw;
-  margin-top: 6vw;
+  padding: 0 2rem 2.5rem 2rem;
+  margin-top: 15vh;
   position: relative;
 }
 
@@ -32,6 +32,8 @@
 
 .social {
   text-align: center;
+  width: 95%;
+  margin: auto;
 }
 
 .social img {
@@ -90,6 +92,13 @@
   min-width: auto;
   max-width: auto;
   padding: 1.5vw 2.5vw;
+}
+
+.title {
+  font-size: 1.2vw;
+  width: 70%;
+  margin: auto;
+  line-height: 1.2em;
 }
 @media only screen and (max-height: 480px) {
 }
