--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -1,8 +1,13 @@
-body {
-  background: url(../../img/pandemics/bg.jpg) 0 0 no-repeat;
-  background-size: 100% 100%;
+body,
+html {
+  background: url(../img/pandemics/bg-body.jpg) 0 0 repeat-y;
 }
 
+.page-holder {
+  background: url(../../img/pandemics/bg.jpg) 0 0 no-repeat !important;
+  background-size: 100% 100% !important;
+  border: 0px solid red;
+}
 .gina {
   bottom: 2.8646vw;
   left: 8.8542vw;
@@ -48,7 +53,8 @@ body {
   background: url(../img/pandemics/moving-tv.png) 0px 0px;
   background-size: 197.3958vw;
   animation: play 0.9s steps(10) infinite;
-  bottom: 39vh;
+  /* bottom: 39vh; */
+  bottom: 24.5vh;
   left: 8.594vw;
 }
 
@@ -62,6 +68,7 @@ body {
 
 .spotlight-pop .title {
   position: relative;
+  margin-top: 8%;
 }
 
 .spotlight-title-img {
@@ -175,7 +182,7 @@ body {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 95%;
   align-items: stretch;
 }
 
@@ -189,11 +196,11 @@ body {
 }
 .outbreak-body {
   height: 100%;
-  padding: 0.7813vw 0;
+  padding: 0;
 }
 
 .outbreak-item {
-  padding: 1.0417vw 2.0833vw;
+  padding: 1vw 2.0833vw;
   font-size: 1.3021vw;
 }
 
