--- a/public/css/completed.css
+++ b/public/css/completed.css
@@ -2,7 +2,7 @@
   background: url(../../img/completed/board.png) center 3vw no-repeat;
   background-size: 90% 90%;
   padding: 0 2rem 2.5rem 2rem;
-  margin-top: 15vh;
+  margin-top: 10%;
   position: relative;
 }
 
@@ -72,7 +72,7 @@
 }
 
 .gina {
-  bottom: -3vw;
+  bottom: 0;
   left: 1vw;
   z-index: 3;
   width: 14vw;
