--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -1,7 +1,19 @@
-body {
+/* body {
   background: url(../../img/zoonotic/bg.jpg) 0 0 no-repeat;
   background-size: 100% 100%;
+} */
+
+body,
+html {
+  background: url(../img/zoonotic/bg-body.jpg) 0 0 repeat-y;
 }
+
+.page-holder {
+  background: url(../../img/zoonotic/bg.jpg) 0 0 no-repeat !important;
+  background-size: 100% 100% !important;
+  border: 0px solid red;
+}
+
 .progressbar .worldtitle {
   top: 10%;
 }
@@ -55,6 +67,7 @@ body {
   /* max-width: 600px; */
   /* padding: 35px 0; */
   width: 60vw;
+  margin-top: 5%;
 }
 
 /* tryout */
