--- a/public/css/base.css
+++ b/public/css/base.css
@@ -6,11 +6,11 @@ body {
   padding: 0;
   font-size: 1vw;
   font-family: Arial, Helvetica, sans-serif;
-  background: url(../img/bg-body.jpg) 0 0 repeat-y;
+  background: url(/img/bg-body.jpg) 0 0 repeat-y;
   /* overflow: hidden; */
   /* background: url(../img/bg.jpg) 0 0 no-repeat;
   background-size: 100% 100%; */
-  border: 0px solid black;
+  border: 1px solid black;
 }
 
 .page {
@@ -531,14 +531,16 @@ button:active {
 }
 
 @media only screen and (orientation: portrait) {
-  body {
-    background-size: cover;
-  }
-  .wrapper {
+  .page {
     display: none;
   }
+  /* .wrapper {
+    display: none;
+  } */
   .bestview {
-    display: flex;
+    display: block;
+    background: url(/img/bg.jpg) 0 0 repeat-y;
+    background-size: cover;
   }
 }
 
