--- a/public/css/base.css
+++ b/public/css/base.css
@@ -10,7 +10,7 @@ body {
   /* overflow: hidden; */
   /* background: url(../img/bg.jpg) 0 0 no-repeat;
   background-size: 100% 100%; */
-  border: 1px solid black;
+  border: 0px solid black;
 }
 
 .page {
@@ -194,12 +194,13 @@ button:active {
 }
 
 /* popup */
-
 .custom-modal .modal-dialog {
   min-width: 60.938vw;
+  /* width: 100%; */
+  margin: auto;
 }
 .custom-modal .modal-content {
-  background-image: url(../img/popup/bg.png);
+  background-image: url(/img/popup/bg.png);
   background-size: 100% 100%;
   background-color: unset;
   min-height: 46.094vw;
@@ -544,6 +545,12 @@ button:active {
   }
 }
 
-/* ip6/7/8+ */
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 580px) {
+  .custom-modal .modal-dialog {
+    width: 30vw;
+  }
+
+  .custom-modal .modal-content {
+    height: 50vw;
+  }
 }
