--- a/public/css/base.css
+++ b/public/css/base.css
@@ -545,12 +545,13 @@ button:active {
   }
 }
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-height: 480px) {
   .custom-modal .modal-dialog {
     width: 30vw;
   }
 
   .custom-modal .modal-content {
-    height: 50vw;
+    height: 20vw;
+    margin-top: 1%;
   }
 }
