--- a/public/css/nipah.css
+++ b/public/css/nipah.css
@@ -123,7 +123,8 @@ html {
 .questions img {
   margin: 0 auto;
   /* max-width: 25vw !important; */
-  width: 25vw;
+  width: 25%;
+  border: 1px solid red;
 }
 
 .question {
