--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -54,7 +54,7 @@ html {
   background-size: 197.3958vw;
   animation: play 0.9s steps(10) infinite;
   /* bottom: 39vh; */
-  bottom: 24.5vh;
+  bottom: 38.5%;
   left: 8.594vw;
 }
 
