--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -14,7 +14,8 @@ html {
   bottom: 2.8646vw;
   left: 8.8542vw;
   z-index: 3;
-  width: 23.3333vw;
+  /* width: 23.3333vw; */
+  width: 41vh;
 }
 
 .gina img {
